project section complete

--- a/index.html
+++ b/index.html
@@ -26,6 +26,45 @@
             <h2><span id="header">BR</span>Architects</h2>
         </div>
     </header>
+    <section class="project-container">
+        <div class="projects">
+            <h3>Projects</h3>
+        </div>
+        <div class="images">
+            <div class="image-container">
+                <img src="images/summerimg.jpeg" alt="summer house">
+                <div class="image-text">Summer House</div>
+            </div>
+            <div class="image-container">
+                <img src="images/brickimg.jpeg" alt="brick house">
+                <div class="image-text">Brick House</div>
+            </div>
+            <div class="image-container">
+                <img src="images/renovatedimg.jpeg" alt="renovated house">
+                <div class="image-text">Renovated House</div>
+            </div>
+            <div class="image-container">
+                <img src="images/barnimg.jpeg" alt="barn house">
+                <div class="image-text">Barn House</div>
+            </div>
+            <div class="image-container">
+                <img src="images/summer2img.jpeg" alt="summer house two">
+                <div class="image-text">Summer House</div>
+            </div>
+            <div class="image-container">
+                <img src="images/brick2img.jpeg" alt="brick house two">
+                <div class="image-text">Brick House</div>
+            </div>
+            <div class="image-container">
+                <img src="images/reno2img.jpeg" alt="renovated house two">
+                <div class="image-text">Renovated House</div>
+            </div>
+            <div class="image-container">
+                <img src="images/barn2img.jpeg" alt="barn house two">
+                <div class="image-text">Barn House</div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
