about section done

--- a/index.html
+++ b/index.html
@@ -65,6 +65,47 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="about-container">
+            <div class="about">
+                <h3>About</h3>
+            </div>
+            <div class="about-text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+            <div class="people-container">
+                <div class="individual">
+                    <img class="grey" src="images/john.jpeg" alt="John Photo">
+                    <h1 class="name">John Doe</h1>
+                    <p class="title">CEO & Founder</p>
+                    <p class="summary">Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+                    <button class="btn-contact">Contact</button>
+                </div>
+                <div class="individual">
+                    <img class="grey" src="images/jane.jpeg" alt="Jane Photo">
+                    <h1 class="name">Jane Doe</h1>
+                    <p class="title">Architect</p>
+                    <p class="summary">Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+                    <button class="btn-contact">Contact</button>
+                </div>
+                <div class="individual">
+                    <img class="grey" src="images/mike.jpeg" alt="Mike Photo">
+                    <h1 class="name">Mike Ross</h1>
+                    <p class="title">Architect</p>
+                    <p class="summary">Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+                    <button class="btn-contact">Contact</button>
+                </div>
+                <div class="individual">
+                    <img class="grey" src="images/dan.jpeg" alt="Dan Photo">
+                    <h1 class="name">Dan Star</h1>
+                    <p class="title">Architect</p>
+                    <p class="summary">Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+                    <button class="btn-contact">Contact</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
